--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="home_adb_dialog_view_command_button_send">Send</string>
 
     <!-- Home - Wireless Adb -->
-    <string name="home_wireless_adb_title"><![CDATA[Start with Wireless debugging]]></string>
+    <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
     <string name="home_wireless_adb_description"><![CDATA[For device runs Android 11, Wireless debugging can be found in Developer options.<p>This process does not requires computer connection. Please refer to <b><a href=\"%1$s\">this help document</a></b>.]]></string>
 
     <!-- Adb -->
