--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -77,6 +77,10 @@
     <string name="about_icon_credits"><![CDATA[Thanks %s for illustrating app icon]]></string>
     <string name="about_view_source_code"><![CDATA[View source code at %s]]></string>
 
+    <!-- Stop -->
+    <string name="action_stop">Stop Shizuku</string>
+    <string name="dialog_stop_message">Shizuku service will be stopped.</string>
+
     <!-- Notification -->
     <string name="notification_channel_service_status">Service start status</string>
     <string name="notification_service_starting">Shizuku service is starting…</string>
