--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
     <string name="home_adb_description"><![CDATA[For devices without root, you need to use adb to start Shizuku (requires computer connection). This process needs to be repeated every time the device is restarted. Please <b><a href=\"%1$s\">read the help</a></b>.]]></string>
     <string name="home_adb_button_view_help">Read help</string>
     <string name="home_adb_button_view_command">View command</string>
-    <string name="home_adb_button_wireless">Wireless adb</string>
     <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* There are some other considerations, please confirm that you have read the help first.]]></string>
     <string name="home_adb_dialog_view_command_copy_button">Copy</string>
     <string name="home_adb_dialog_view_command_button_send">Send</string>
@@ -25,14 +24,14 @@
     <string name="home_wireless_adb_description"><![CDATA[For device runs Android 11, Wireless debugging can be found in Developer options.<p>This process does not requires computer connection. Please refer to <b><a href=\"%1$s\">this help document</a></b>.]]></string>
 
     <!-- Adb -->
-    <string name="dialog_adb_title" translatable="false">@string/home_adb_button_wireless</string>
+    <string name="dialog_adb_title">Wireless adb</string>
     <string name="dialog_adb_port">Port</string>
     <string name="dialog_adb_invalid_port">Port is an integer ranging from 1 to 65535.</string>
-
-    <!-- Adb pairing-->
     <string name="adb_pairing">Pairing</string>
     <string name="dialog_adb_pairing_title">Pair with device</string>
     <string name="dialog_adb_pairing_paring_code">Pairing code</string>
+    <string name="paring_code_is_wrong">Pairing code is wrong.</string>
+    <string name="cannot_connect_port">Can\'t connect to this port.</string>
 
     <!-- Home - Root -->
     <string name="home_root_title"><![CDATA[Start directly (rooted devices)]]></string>
