--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -9,10 +9,10 @@
     <string name="home_status_service_not_running">%1$s 没有运行</string>
     <string name="home_root_button_start">启动</string>
     <string name="home_root_button_restart">重新启动</string>
-    <string name="home_root_title"><![CDATA[直接启动（已 root 设备）]]></string>
+    <string name="home_root_title"><![CDATA[启动（针对已 root 设备）]]></string>
     <string name="home_adb_title"><![CDATA[通过连接电脑启动（使用 adb）]]></string>
     <string name="home_adb_description"><![CDATA[对于没有 root 的设备需要借助 adb 来启动 Shizuku（需要连接电脑）。这个过程每次设备重新启动后需要重新进行。请<b><a href=\"%1$s\">阅读帮助</a></b>。]]></string>
-    <string name="home_root_description"><![CDATA[对于有 root 的设备 Shizuku 可直接启动。</b><p>另外，Shizuku 可以在开机时自动启动。如果没有，请检查您的系统或是第三方工具是否限制了 Shizuku。<br>你可以参考 %s。]]></string>
+    <string name="home_root_description"><![CDATA[另外，Shizuku 可以在开机时自动启动。如果没有，请检查您的系统或是第三方工具是否限制了 Shizuku。<br>你可以参考 %s。]]></string>
     <string name="home_adb_dialog_view_command_copy_button">复制</string>
     <string name="home_adb_dialog_view_command_button_send">发送</string>
     <string name="home_adb_button_view_command">查看指令</string>
@@ -66,7 +66,7 @@
     <string name="starter">启动程序</string>
     <string name="dialog_adb_invalid_port">端口号是一个 1 至 65535 的整数。</string>
     <string name="home_wireless_adb_title"><![CDATA[通过无线调试启动]]></string>
-    <string name="home_wireless_adb_description"><![CDATA[对于运行 Android 11 的设备，可以在开发者选项中找到无线调试。<p>此过程无需连接电脑。请参考<b><a href=\"%1$s\">此帮助文档</a></b>。]]></string>
+    <string name="home_wireless_adb_description"><![CDATA[对于 Android 11，无线调试是一个内置功能。请参考<b><a href=\"%1$s\">此帮助文档</a></b>。<p>此功能可在所有系统版本上工作。但在 Android 11 以前，无线调试无法直接启用。]]></string>
     <string name="action_stop">停止 Shizuku</string>
     <string name="dialog_stop_message">Shizuku 服务将被停止。</string>
     <string name="paring_code_is_wrong">配对码错误。</string>
