--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -9,10 +9,10 @@
     <string name="home_status_service_not_running">%1$s 沒有運作</string>
     <string name="home_root_button_start">啟動</string>
     <string name="home_root_button_restart">重新啟動</string>
-    <string name="home_root_title"><![CDATA[直接啟動（已 root 裝置）]]></string>
+    <string name="home_root_title"><![CDATA[啟動（針對已 root 裝置）]]></string>
     <string name="home_adb_title"><![CDATA[透過連線電腦啟動（使用 adb）]]></string>
     <string name="home_adb_description"><![CDATA[對於沒有 root 的裝置需要藉助 adb 來啟動 Shizuku（需要連線電腦）。這個過程每次裝置重新啟動後需要重新進行。請<b><a href=\"%1$s\">閱讀幫助</a></b>。]]></string>
-    <string name="home_root_description"><![CDATA[對於有 root 的裝置 Shizuku 可直接啟動。</b><p>另外，Shizuku 可以在開機時自動啟動。如果沒有，請檢查您的系統或是第三方工具是否限制了 Shizuku。<br>你可以參考 %s。]]></string>
+    <string name="home_root_description"><![CDATA[另外，Shizuku 可以在開機時自動啟動。如果沒有，請檢查您的系統或是第三方工具是否限制了 Shizuku。<br>你可以參考 %s。]]></string>
     <string name="home_adb_dialog_view_command_copy_button">複製</string>
     <string name="home_adb_dialog_view_command_button_send">傳送</string>
     <string name="home_adb_button_view_command">檢視指令</string>
@@ -66,7 +66,7 @@
     <string name="starter">啟動程式</string>
     <string name="dialog_adb_invalid_port">通訊埠是一個 1 至 65535 的整數。</string>
     <string name="home_wireless_adb_title"><![CDATA[通過無線偵錯啟動]]></string>
-    <string name="home_wireless_adb_description"><![CDATA[對於運作 Android 11 的裝置，可以在開發人員選項中找到無線偵錯。<p>此過程無需連線電腦。請參考<b><a href=\"%1$s\">此幫助文件</a></b>。]]></string>
+    <string name="home_wireless_adb_description"><![CDATA[對於 Android 11，無線偵錯是一個內建功能請參考<b><a href=\"%1$s\">此幫助文件</a></b>。<p>此功能可在所有系統版本上工作。但在 Android 11 以前，無線偵錯無法直接啟用。]]></string>
     <string name="action_stop">停止 Shizuku</string>
     <string name="dialog_stop_message">Shizuku 服務將被停止。</string>
     <string name="paring_code_is_wrong">配對碼錯誤。</string>
