--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -24,17 +24,20 @@
     <string name="home_wireless_adb_description"><![CDATA[In Android 11, Wireless debugging is a built-in feature. Please refer to <b><a href=\"%1$s\">this help document</a></b>.<p>This works for all system versions. But before Android 11, wireless debugging cannot be directly enabled.]]></string>
 
     <!-- Adb -->
-    <string name="dialog_adb_title">Wireless debugging</string>
+    <string name="dialog_adb_discovery">Searching for wireless debugging service</string>
+    <string name="dialog_adb_discovery_message">Please enable the "Wireless Debugging" in the "Developer Options". \n\nNote: The wireless debugging is auto turned off after switching or turning off WiFi. Please also turn on "USB debugging" to ensure that the service can run all the time.</string>
     <string name="dialog_adb_port">Port</string>
     <string name="dialog_adb_invalid_port">Port is an integer ranging from 1 to 65535.</string>
     <string name="adb_pairing">Pairing</string>
     <string name="dialog_adb_pairing_title">Pair with device</string>
+    <string name="dialog_adb_pairing_discovery">Searching for pairing service</string>
     <string name="dialog_adb_pairing_paring_code">Pairing code</string>
     <string name="paring_code_is_wrong">Pairing code is wrong.</string>
     <string name="cannot_connect_port">Can\'t connect to this port.</string>
     <string name="adb_pairing_requires_multi_window">The pairing process requires system\'s pairing dialog is always visible, please enable system\'s split-screen (multi-window) mode.</string>
     <string name="adb_error_key_store">Unable to generate key for wireless debugging.\nThis may be because KeyStore mechanism of this device is broken.</string>
     <string name="adb_pair_required">Please go through the pairing step first.</string>
+    <string name="development_settings">Developer options</string>
 
     <!-- Home - Root -->
     <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
